auto-test/tests/chapter_17/invalid_types/extra_credit/compound_void_rval_add.c

void f(void) {
    return;
}

int main(void) {
    int *x = 0;
    x += f();
    return 0;
}